Fix home page(shapes covered nav links)

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,9 +9,9 @@
         display: none;
     }
 
-app-field {
-    max-width: 32.5rem;
-}
+    app-field {
+        max-width: 32.5rem;
+    }
 
     &__header {
         position: relative;
@@ -65,6 +65,7 @@ app-field {
         position: absolute;
         top: 0;
         right: 0;
+        z-index: -1;
         display: block;
         width: 100%;
         height: 100%;
@@ -80,7 +81,7 @@ app-field {
         }
     }
 
-    .home {        
+    .home {
         &__box {
             display: flex;
             align-items: center;
